# qtcreator_additions

./: README.md
templates/wizards/opencvcppapp-cmake/: CMakeLists.txt  main.cpp  wizard.xml
